# dittoX

./: README.md  ditto.py  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/dittoX/: ditto.py
