[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dittoX"
version = "0.0.1"
authors = [
    { name = "scooterking38", email = "mrwe3838@gmail.com" },
]
description = "Engine for generating and executing dynamic code templates: fast, readable, and incredibly flexible."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Scooterking38/dittoX"
Issues = "https://github.com/Scooterking38/dittoX/issues"
